wp-content/themes/tomdallimore/assets/src/sass/_blog.scss
#blog {
    .ninecol {   
        float:left;       
            h2 {
                text-indent:-999px;
                height:80px;
                width:80px;
                margin:0 auto;
                    &.article {
                        @extend .sp-blog-pencil;
                    }
                    &.link {
                        @extend .sp-blog-link;
                    }
            }
            .tencol {
                    h1 {
                        display: inline-block;
                    }
                    .tags {
                        a {
                            background-color: $white;
                            padding:7px 10px;
                            color: $lightgray;
                            margin-right:12px;
                            font-family: "MuseoSlab-500", Helvetica, Arial, sans-serif;
                            @include transition-property(background-color, color);
                            @include transition-duration(0.5s, 0.4s);
                            @include transition-timing-function(ease-in, ease-in);
                            text-transform: uppercase;
                            font-size:0.8em;
                                &:hover {
                                    color: #fff;
                                    background-color: $blue;
                                }
                        }
                    }
            }
    }
    article {
        .tencol {
            padding-bottom: 35px;
        }
    }
    .sidebar_content {
        float:right;
    }
    section[role=navigation] {
        .tencol {
            border-top: 1px solid #FFFFFF;
            border-bottom:1px solid #E6E6E6;
                .pre_nex {
                    padding:15px 0;
                    overflow:hidden;
                    opacity:0.3;
                    filter:alpha(opacity=30);
                    @include transition-property(opacity);
                    @include transition-duration(0.5s);
                    @include transition-timing-function(ease-in);
                        a[rel="prev"] {
                            float:left;
                            padding-left:20px;
                                i {
                                    left:0px;
                                }
                        }
                        a[rel="next"] {
                            float:right;
                            text-align:right;
                            padding-right:20px;
                                i {
                                    right:0px;
                                }
                        }
                        a {
                            width:40%;
                            i {
                                font-size:1.5em;
                                color:$gray;
                            }
                            div {
                                font-family: "MuseoSans-300", Helvetica, Arial, sans-serif !important;
                                color:$gray;
                            }
                            span {
                                font-family: "MuseoSlab-500", Helvetica, Arial, sans-serif;
                                color:$darkgray;
                                @include transition-property(color);
                                @include transition-duration(0.5s);
                                @include transition-timing-function(ease-in);
                            }
                            &:hover > span {
                                color:$blue !important;
                            }
                        }
                        &:hover {
                            opacity:1;
                            filter:alpha(opacity=100);
                        }
                }
        }
    }
}
.blog_home {
    article {
        &:last-child {
            margin-bottom: 0;
        }
    }
}
.single_post {
    article {
        .tencol {
            border-bottom:1px solid #E6E6E6;
        }
    }
}
.blog_search, .blog_category, .blog_tags {
    .row {
        article {
            padding-top:30px;
        }
    }
    .type_header {
        h1 {
            margin:0;
            padding:0 0 5px 2%;
            width:100%;
            border-bottom:1px solid #E6E6E6;
            position: relative;
                &:after {
                   content:'';
                   position:absolute;
                   left:0;
                   right:0;
                   bottom:-2px;
                   border-bottom: 1px solid #FFFFFF;
                }
        }
    }
}

